--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang=en>
 	<head>
 		<meta charset="UTF-8">
+		<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 		<link href="style.css" rel="stylesheet">
 		<title>vidstream</title>
 	</head>
+	
 	<body>
+		
 		<nav class="top">
 			<div class="logo">vidstream</div>
 			<div class="search">
@@ -13,11 +16,27 @@
 				<button class="button" type="submit">Go</button>
 			</div>
 		</nav>
-		<nav class="content">
-			<div class="first">video</div>
-			<div class="second">video</div>
-			<div class="third">video</div>
-			<div class="fourth">video</div>
-		</nav>
+		
+		<div class="content">
+			<div class="info">
+				<input class="thumbnail" type="image" src="content/wp10478123-eastward-wallpapers.jpg">
+				<a class="link" href="">Eastward thumbnail one</a>
+			</div>
+			<div class="info">
+				<input class="thumbnail" type="image" src="content/wp10478180-eastward-wallpapers.jpg">
+				<a class="link" href="">Eastward thumbnail two</a>
+			</div>
+			<div class="info">
+				<input class="thumbnail" type="image" src="content/wp10478126-eastward-wallpapers.jpg">
+				<a class="link" href="">Eastward thumbnail three</a>
+			</div>
+			<div class="info">
+				<input class="thumbnail" type="image" src="content/wp10478188-eastward-wallpapers.png">
+				<a class="link" href="">Eastward thumbnail four</a>
+			</div>
+			
+		</div>
+		
+		
 	</body>
 </html>
