--- a/index.html
+++ b/index.html
@@ -4,37 +4,38 @@
 		<meta charset="UTF-8">
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 		<link href="style.css" rel="stylesheet">
-		<title>vidstream</title>
+		<title>motion</title>
 	</head>
 	
 	<body>
 		
+		<!-- LOGO, SEARCH BAR SECTION-->
 		<nav class="top">
-			<div class="logo">vidstream</div>
+			<div class="logo">motion</div>
 			<div class="search">
 				<input class="bar" type="text" placeholder="search">
 				<button class="button" type="submit">Go</button>
 			</div>
 		</nav>
 		
+		<!-- CONTENT SECTION -->
 		<div class="content">
 			<div class="info">
 				<input class="thumbnail" type="image" src="content/wp10478123-eastward-wallpapers.jpg">
-				<a class="link" href="">Eastward thumbnail one</a>
+				<a class="link" href="">Eastward gameplay part 1</a>
 			</div>
 			<div class="info">
 				<input class="thumbnail" type="image" src="content/wp10478180-eastward-wallpapers.jpg">
-				<a class="link" href="">Eastward thumbnail two</a>
+				<a class="link" href="">Eastward gameplay part 2</a>
 			</div>
 			<div class="info">
 				<input class="thumbnail" type="image" src="content/wp10478126-eastward-wallpapers.jpg">
-				<a class="link" href="">Eastward thumbnail three</a>
+				<a class="link" href="">Eastward gameplay part 3</a>
 			</div>
 			<div class="info">
 				<input class="thumbnail" type="image" src="content/wp10478188-eastward-wallpapers.png">
-				<a class="link" href="">Eastward thumbnail four</a>
+				<a class="link" href="">Eastward gameplay part 4</a>
 			</div>
-			
 		</div>
 		
 		
