--- a/index.html
+++ b/index.html
@@ -11,30 +11,52 @@
 		
 		<!-- LOGO, SEARCH BAR SECTION-->
 		<nav class="top">
-			<div class="logo">motion</div>
+			<div class="logo">
+				<span class="m">m</span>
+				<span class="o">o</span>
+				<span class="t">t</span>
+				<span class="i">i</span>
+				<span class="o">o</span>
+				<span class="n">n</span>
+			</div>
 			<div class="search">
 				<input class="bar" type="text" placeholder="search">
 				<button class="button" type="submit">Go</button>
 			</div>
+			<div></div>
 		</nav>
+		
+		<hr class="margin">
 		
 		<!-- CONTENT SECTION -->
 		<div class="content">
 			<div class="info">
-				<input class="thumbnail" type="image" src="content/wp10478123-eastward-wallpapers.jpg">
-				<a class="link" href="">Eastward gameplay part 1</a>
+				<img class="thumbnail" src="content/jerry_on_fire.gif">
+				<a class="link" href="">Jerry on fire</a>
 			</div>
 			<div class="info">
-				<input class="thumbnail" type="image" src="content/wp10478180-eastward-wallpapers.jpg">
-				<a class="link" href="">Eastward gameplay part 2</a>
+				<img class="thumbnail" src="content/eastward-sam.gif">
+				<a class="link" href="">Sam - Eastward</a>
 			</div>
 			<div class="info">
-				<input class="thumbnail" type="image" src="content/wp10478126-eastward-wallpapers.jpg">
-				<a class="link" href="">Eastward gameplay part 3</a>
+				<img class="thumbnail" src="content/cute-bunny.gif">
+				<a class="link" href="">cute bunny</a>
 			</div>
 			<div class="info">
-				<input class="thumbnail" type="image" src="content/wp10478188-eastward-wallpapers.png">
-				<a class="link" href="">Eastward gameplay part 4</a>
+				<img class="thumbnail" src="content/tom-kissing-jerry.gif">
+				<a class="link" href="">Tom kissing Jerry</a>
+			</div>
+			<div class="info">
+				<img class="thumbnail" src="content/eastward-welcome-to-village.gif">
+				<a class="link" href="">Eastward Chapter 2 - Welcome to the village</a>
+			</div>
+			<div class="info">
+				<img class="thumbnail" src="content/eastward-sam-mirror.gif">
+				<a class="link" href="">Eastward - Sam's alter ego</a>
+			</div>
+			<div class="info">
+				<img class="thumbnail" src="content/grizzy-and-the-lemmings-lemming.gif">
+				<a class="link" href="">Lemmings dancing!</a>
 			</div>
 		</div>
 		
