--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 				<a class="link" href="">NEW YORK CITY</a>
 			</div>
 		</div>
-		<button onclick="this.play()">set</button>
 		<script type="text/javascript">
 			var video = document.querySelector(".thumbnail");
 			function play() {
-				video.currentTime = 5;
+				video.play();
 			}
 			function pause() {
+				video.pause();
 			}
 		</script>
 		
